# MobiT

./: .gitignore  README.md  config.template.yaml  mobit_main.py  pyproject.toml
examples/app/: app-debug.apk  app.varlorg.unote.json
examples/app.varlorg.unote_0/: defects.json  fun_logic.json  pages.json  transitions.json
examples/app.varlorg.unote_0/assets/: 20250520-172907.json  20250520-172907.xml  20250520-172959.json  20250520-172959.xml  20250520-173104.xml  20250520-173129.json  20250520-173129.xml  20250520-173134.xml  20250520-173143.json  20250520-173157.json  20250520-173157.xml  20250520-173218.json  20250520-173224.xml  20250520-173234.xml  20250520-173240.xml  20250520-173245.xml  20250520-173250.xml  20250520-173309.json  20250520-173315.xml  20250520-173320.xml  20250520-173325.xml  20250520-173330.xml  20250520-173336.xml  20250520-173341.xml  20250520-173346.json  20250520-173346.xml  20250520-173411.xml  20250520-173422.json  20250520-173422.xml  20250520-173427.xml  20250520-173435.xml  20250520-173441.json  20250520-173451.json  20250520-173451.xml  20250520-173502.json  20250520-173502.xml  20250520-173513.json  20250520-173513.xml  20250520-173524.json  20250520-173524.xml
mobit/: and_controller.py  config.py  defect_detection.py  file_utils.py  img_utils.py  llm.py  logic_graph.py  page_graph.py  prompts.py  xml_parser.py
